# amax.cdt

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  IMPORTANT.md  LICENSE  README.md  docs.json  pipeline.jsonc
.cicd/: pipeline.yml
.github/workflows/: docker-image.yml  main.yml
docs/: 02_installation.md  08_troubleshooting.md  index.md
docs/03_command-reference/: amax-abidiff.md  amax-abigen.md  amax-cc.md  amax-cpp.md  amax-init.md  amax-ld.md
docs/04_upgrading/: 1.2-to-1.3.md  1.5-to-1.6.md
docs/05_best-practices/: 05_securing_your_contract.md  10_native-tester-compilation.md  11_debugging_a_smart_contract.md  12_binary-extension.md
docs/06_how-to-guides/: 04_how_to_create_and_use_action_wrappers.md
docs/09_tutorials/: 01_binary-extension.md
examples/hello/: CMakeLists.txt  README.txt
examples/multi_index_example/: CMakeLists.txt  README.txt
examples/multi_index_example/src/: CMakeLists.txt
examples/send_inline/: CMakeLists.txt  README.txt
examples/singleton_example/: CMakeLists.txt  README.txt
libraries/: CMakeLists.txt
libraries/native/: intrinsics.cpp
modules/: AmaxWasmToolchain.cmake.in  EosioCDTMacros.cmake.in  InstallCDT.cmake  LibrariesExternalProject.txt  TestsExternalProject.txt  amax.cdt-config.cmake
scripts/: amaxcdt_build.sh  amaxcdt_build_amazon.sh  amaxcdt_build_centos.sh  amaxcdt_build_darwin.sh  amaxcdt_build_darwin_deps  amaxcdt_build_fedora.sh  amaxcdt_build_ubuntu.sh  amaxcdt_install.sh  amaxcdt_uninstall.sh  generate_bottle.sh  generate_tarball.sh
tests/integration/: CMakeLists.txt
(+66 files in other folders)
